projects section alignment issue solved

--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ header ul a{
 .project-info{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 50%;
   padding-left: 10%;
